--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@ canvas {
 
   <!-- Final Ending -->
   <div id="final-ending" class="page hidden">
-    <div class="final-text">Happy Birthday, I hope tujhe accha laga hoga💗</div>
+    <div class="final-text">Happy Birthday, I hope you liked this little gift💗</div>
   </div>
 
   <script>
